Cleaning up image layout, code, adding readme

--- a/app/item.html
+++ b/app/item.html
@@ -9,7 +9,7 @@
 </head>
 <body>
         <div class="wrapper">
-        <h2 id="fileName">FileName</h2>
+        <div id="fileName"></div>
         <main class="container">
             <div class="row">
                 <div id="frm" class="col-twothirds">
@@ -54,7 +54,7 @@
 
                     </form>
                 </div>
-                <div id="imageSection" class="col-third"  style="border: 1px solid #b32f15">
+                <div id="imageSection" class="col-third">
                     <img id="image" />
                 </div>
 
